# txtft

./: README.md  SPEC.md  common.py  encode.py  fetch.py  pyproject.toml  requirements.txt  serve.py  test_roundtrip.py  wordlist.txt
.github/workflows/: ci.yml
tests/: test_roundtrip.py
