[project]
name = "txtfs"
version = "0.1.0"
description = "DNS TXT record file transfer utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["dnspython>=2.6"]

[project.scripts]
txtfs-encode = "encode:main"
txtfs-serve = "serve:main"
txtfs-fetch = "fetch:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["common", "encode", "serve", "fetch"]
